@@ -1,3 +1,9 @@
+2008-09-18  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.XmlEditor.Completion/XmlCompletionDataProvider.cs,
+	  MonoDevelop.XmlEditor.Completion/ClosingBracketCompletionDataProvider.cs:
+	  Track api changes.
+
 2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Tests/MonoDevelop.XmlEditor.Tests.mdp, gtk-gui/generated.cs,
